if BUILD_TEMPLATE
SUBDIRS=_TEMPLATE_
endif

EXTRA_DIST = \
		fcbt/__init__.py \
		fcbt/CreateModule.py \
		fcbt/DistBin.py \
		fcbt/DistSetup.py \
		fcbt/DistSrc.py \
		fcbt/DistTools.py \
		fcbt/FileTools.py \
		fcbt/NextBuildNumber.py \
		generate.py \
		generateBase/generateModel_ModuleTest.xml \
		generateBase/generateMetaModel_Module.xsd \
		generateBase/__init__.py \
		generateBase/generateModel_Module.py \
		generateBase/generateDS.py \
		generateBase/generateTools.py \
		generateTemplates/__init__.py \
		generateTemplates/template.py \
		generateTemplates/templateClassPyExport.py \
		generateTemplates/templateCMakeFile.py \
		generateTemplates/templateCPPFile.py \
		generateTemplates/templateHeaderFile.py \
		generateTemplates/templateInitPy.py \
		generateTemplates/templateInitGuiPy.py \
		generateTemplates/templateModule.py \
		generateTemplates/templateModuleApp.py \
		generateTemplates/templateModuleGui.py \
		generateTemplates/templateModuleAppFeature.py \
		generateTemplates/templateModuleAppMain.py \
		plugins/widget/customwidgets.cpp \
		plugins/widget/customwidgets.h \
		plugins/widget/plugin.cpp \
		plugins/widget/plugin.h \
		plugins/widget/plugin.pro \
		dir2qrc.py \
		DistTools.py \
		doctools.py \
		fcbt.py \
		FCFileTools.py \
		InstallMsg.txt \
		MakeApp.py \
		MakeAppTools.py \
		MakeNewBuildNbr.py \
		MemoryLeaks.py \
		PythonToCPP.py \
		pythondoc.py \
		SubWCRev.py \
		wiki2qhelp.py
